--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "argon2": "^0.40.1",
     "body-parser": "^1.20.2",
     "bower": "^1.8.14",
     "cookie-parser": "~1.4.4",
