--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "text-to-image": "^5.2.0"
   },
   "devDependencies": {
     "express-session": "^1.18.0"
