changed picture sizing and added edit posts to search page

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ databaseConnection.js
 /uploads/*
 /public/images/*
 !/public/images/unileaks.png
+/public/images/*
+!/public/images/unileaks.png
 passwordKeys.json
 .gitignore
