--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "text-to-image": "^5.2.0"
   },
   "devDependencies": {
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "jest": "^29.7.0"
   }
 }
